further modal fixes on mobile

--- a/src/_assets/scss/main.scss
+++ b/src/_assets/scss/main.scss
@@ -1198,7 +1198,7 @@ footer {
 	.logo {
 		margin-bottom: 1.5rem;
 	}
-	.col-sm {
+	.col-md {
 		padding-left: 0;
 		padding-right: 0;
 	}
@@ -1209,7 +1209,10 @@ footer {
 		height: 100%;
 		color: #fff;
 		background-color: $blue;
-		padding: 100px 60px;
+		padding: 50px 30px;
+		@include media-breakpoint-up(sm){
+			padding: 100px 60px;
+		}
 		@include media-breakpoint-up(md){
 			padding-right: 250px;
 			background: url(../template-images/img-whitepaper-modal.png) 90% 150px no-repeat $blue;
@@ -1297,19 +1300,28 @@ footer {
 	.logo {
 		margin-bottom: 1.5rem;
 	}
-	.col-sm {
+	.col-md {
 		padding-left: 0;
 		padding-right: 0;
 	}
 	.content {
-		padding: 100px 60px;
+		padding: 50px 30px;
+		@include media-breakpoint-up(sm){
+			padding: 100px 60px;
+		}
 	}
 	.content-1 {
 		height: 100%;
 		background: url(../template-images/bg-freetrialmodal.jpg) center no-repeat $blue;
 		background-size: cover;
 		color: #fff;
-		padding-right: 200px;
+		padding: 50px 30px;
+		@include media-breakpoint-up(sm){
+			padding: 100px 60px;
+		}
+		@include media-breakpoint-up(md){
+			padding-right: 200px;
+		}
 		h5{
 			text-transform: uppercase;
 			font-size: 1rem;
@@ -1342,6 +1354,24 @@ footer {
 		.note {
 			font-size: .8125rem;
 			color: #353535;
+		}
+	}
+	.row {
+		flex-direction: column-reverse;
+		@include media-breakpoint-up(md){
+			flex-direction: row;
+		}
+	}
+	.form-row {
+		flex-direction: column;
+		@include media-breakpoint-up(md){
+			flex-direction: row;
+		}
+		.col {
+			flex-basis: auto;
+			@include media-breakpoint-up(md){
+				flex-basis: 0;
+			}
 		}
 	}
 }
